--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello Microverse</h1>
+    <header class="favorit-color">Hello Microverse</header>
 </body>
 </html>
